--- a/index.html
+++ b/index.html
@@ -606,34 +606,34 @@
       
       <div class="design-gallery reveal-up">
         <div class="design-gallery__item">
-          <img src="images/design-1.png" alt="تصميم شعار شركة تقنية" data-src="design-1.png">
+          <img src="design-1.png" alt="تصميم شعار شركة تقنية" data-src="design-1.png">
         </div>
         <div class="design-gallery__item">
-          <img src="images/design-2.png" alt="تصميم هوية بصرية لمؤسسة تعليمية" data-src="design-2.png">
+          <img src="design-2.png" alt="تصميم هوية بصرية لمؤسسة تعليمية" data-src="design-2.png">
         </div>
         <div class="design-gallery__item">
-          <img src="images/design-3.png" alt="تصميم غلاف كتاب" data-src="design-3.png">
+          <img src="design-3.png" alt="تصميم غلاف كتاب" data-src="design-3.png">
         </div>
         <div class="design-gallery__item">
-          <img src="images/design-4.png" alt="تصميم بانر إعلاني" data-src="design-4.png">
+          <img src="design-4.png" alt="تصميم بانر إعلاني" data-src="design-4.png">
         </div>
         <div class="design-gallery__item">
-          <img src="images/design-5.png" alt="تصميم مواد تسويقية" data-src="design-5.png">
+          <img src="design-5.png" alt="تصميم مواد تسويقية" data-src="design-5.png">
         </div>
         <div class="design-gallery__item">
-          <img src="images/design-6.png" alt="تصميم شعار شخصي" data-src="design-6.png">
+          <img src="design-6.png" alt="تصميم شعار شخصي" data-src="design-6.png">
         </div>
         <div class="design-gallery__item">
-          <img src="images/design-7.png" alt="تصميم كارت عمل" data-src="design-7.jpg">
+          <img src="design-7.png" alt="تصميم كارت عمل" data-src="design-7.jpg">
         </div>
         <div class="design-gallery__item">
-          <img src="images/design-8.png" alt="تصميم إنفوجرافيك" data-src="design-8.png">
+          <img src="design-8.png" alt="تصميم إنفوجرافيك" data-src="design-8.png">
         </div>
         <div class="design-gallery__item">
-          <img src="images/design-9.jpg" alt="تصميم واجهة تطبيق" data-src="design-9.jpg">
+          <img src="design-9.jpg" alt="تصميم واجهة تطبيق" data-src="design-9.jpg">
         </div>
         <div class="design-gallery__item">
-          <img src="images/design-10.png" alt="تصميم بروشور" data-src="design-10.png">
+          <img src="design-10.png" alt="تصميم بروشور" data-src="design-10.png">
         </div>
       </div>
     </div>
