--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
           <img src="design-6.png" alt="تصميم شعار شخصي" data-src="design-6.png">
         </div>
         <div class="design-gallery__item">
-          <img src="design-7.png" alt="تصميم كارت عمل" data-src="design-7.jpg">
+          <img src="design-7.png" alt="تصميم كارت عمل" data-src="design-7.png">
         </div>
         <div class="design-gallery__item">
           <img src="design-8.png" alt="تصميم إنفوجرافيك" data-src="design-8.png">
